fix time, no scrollbar only on spotify page

--- a/web/src/main/resources/static/site.css
+++ b/web/src/main/resources/static/site.css
@@ -1,23 +1,5 @@
 body {
-    /* https://blog.logrocket.com/css-full-page-background/ */
-    width: 100vw;
-    height: 100vh;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-
     font-family: 'Roboto Condensed', sans-serif;
-
-    overflow: hidden; /* Hide scrollbars */
-
-    /* Hide scrollbar for IE, Edge and Firefox */
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-}
-
-/* Hide scrollbar for Chrome, Safari and Opera */
-::-webkit-scrollbar {
-    display: none;
 }
 
 .title {
