--- a/web/src/main/resources/static/spotify.css
+++ b/web/src/main/resources/static/spotify.css
@@ -1,5 +1,23 @@
 body {
     background-image: url('/backgroundDarker.png');
+
+    /* https://blog.logrocket.com/css-full-page-background/ */
+    width: 100vw;
+    height: 100vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    overflow: hidden; /* Hide scrollbars */
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+::-webkit-scrollbar {
+    display: none;
 }
 
 .currentlyPlaying {
